src/App.css
body {
    margin: 0;
    padding: 0;
    font-family: 'Sahitya', serif;
}

a {
    text-decoration: none;
    color: inherit;
}

a:hover {
    text-decoration: underline;
}

p {
    font-size: 20px;
    line-height: 160%;
}   

p a {
    text-decoration: underline;
}

.postGrid {
  width: 88vw;
}

.gridMap {
  width: 23%;
  height: 230px;
}

.gridMapVideo {
  width: 31%;
  height: 275px;
}

.gridMap p, .gridMapVideo p {
  margin-top: 1px;
  font-size: 16px;
}

.pageTitle {
    height: 22px;
    opacity: 0.93;
    margin-top: 15px;
}

/* NAVBAR */
.oktHeader {
    font-family: sans-serif;
    position: fixed;
    top: 0;
    width: 100%;
    text-align: left;
    padding-top: 7px;
    height: 45px;
    background-color: #FFFFFF;
    z-index: 100;
}

.logo {
    width: 340px;
    padding-left: 52px;
    padding-top: 4px;
}

.oktTitle {
    margin-bottom: 0px;
    margin-left: 10px;
    font-weight: bold;
}

.mainNav {
    list-style: none;
    display: flex;  
    justify-content: space-between;
    padding-left: 0;
    width: 570px;
    margin-left: 450px;
    margin-top: -29px;
    font-size: 18px;
}

.navItem {
    height: 20px;
}

.navLink:hover .lineHide {
    visibility: hidden;
}

.lineHide {
    visibility: visible; 
    position: relative;
    display: block;
    width: 100%;
    height: 8px;
    background-color: #FFFFFF;
    margin-top: -10px;
}

.mainNav img {
    display: inline;
}

.mainNav img:hover, .oktTitle:hover {
    cursor: pointer;
}

.postTitle {
    font-family: 'Open Sans', sans-serif;
    line-height: 130%;
    color: #222222;
}

.postDate {
    font-family: 'Open Sans', sans-serif;
    line-height: 130%;
    color: #999999;
    margin-top: -14px;
}

.previousLink {
    font-family: 'Open Sans', sans-serif;
    font-weight: bold;
    font-size: 24px;
    line-height: 100%;
    color: #222222;
}

/* CONTAINER FOR PAGE COMPONENTS */
.mainBody {
    max-width: 100vw;
    padding-top: 20px;
    display: block;
    background-color: #F7F7F7;
    margin-top: 50px;
    padding-left: 55px;
}

.pageBody img {
    display: block;
    height: auto;
    width: 100%;
    opacity: 0.9;
}

.backButton {
    max-height: 25px;
    width: auto;
}

.mainBody .wp-caption {
    min-width: 100%;
}

.mainBody .size-full, .mainBody .wp-image-68 {
    min-width: 100%;
}

iframe {
    display: block;
    height: 400px;
    max-width: 100%;
}

.youtube-player {
    height: 500px;
}

.embed-vimeo iframe {
    min-width: 100%;
    height: 450px;
}

/* ABOUT PAGE */
.aboutBody {
    width: 65%;
    min-width: 500px;
}

.pressQuote {
    width: 70%;
    font-style: italic; 
    font-weight: bold;
    margin-top: 30px;
    background-color: #EDEDED;
    padding: 7px;
}

.villagevoice { margin-left: 5%; }
.nyt { margin-left: 22%; }

.aboutHrs .hr2, .aboutHrs .hr3 { width: 100%; } 

.aboutHrs .hr3 {
    display: none;
    width: 100%;
}

.attribution {
    font-weight: bold;
    margin-left: 500px;
    margin-top: -20px;
}

.aboutPic {
    width: 100%;
    opacity: 0.9;
    z-index: 10;
}

.contactUs {
    height: 18px;
}

/* HOME PAGE */
.homeBody {
    margin-left: -55px; /* cancels out .mainBody padding */
    margin-top: -18px; /* cancels out .mainBody padding */
    background-color: #EDEDED;
}

.homeTop {
    width: 100%;
    display: flex;
    height: 500px;
}

.featuredBox {
    width: 70%;
}

.featuredBox a:hover {
    text-decoration: none;
}

.featuredHover:hover {
    opacity: 0.85;
}

.newsBox {
    width: 30%;
    padding-left: 15px;
    padding-top: 0px;
    background-color: #FFFFFF;
    height: 140%;
}

.twitterBox {
    height: 200px;
    padding-right: 15px;
    opacity: 0.95;
}

.twitterBox .twitterBoxLinkSrc {
    width: 200px;
    margin-top:15px;
    opacity: 0.99;
    z-index: 1;
}

.twitterBox .twitterBoxLink:hover {
    cursor: pointer;
}

.twitterBox .tBoxHoverCover {
    background-color: #FFFFFF;
    visibility: visible;
    display: block;
    width: 200px;
    height: 10px;
    margin-top: -16px;
    opacity: 0.99;
    z-index: 2;
}

.twitterBox .twitterBoxLink:hover .tBoxHoverCover {
    visibility: hidden;
}

.newsBox p {
    font-family: 'Open Sans', sans-serif;
    color: #444444;
    max-width: 88%;
    font-size: 16px;
    font-weight: bold;
    line-height: 140%;
}

.thumbDiv {
    height: 700px;
    flex-wrap: wrap;
    justify-content: space-around;
    display: flex;
    background-color: #EDEDED;
    margin-top: 20px;
    padding: 12px;
}

.thumbDiv .thumb {
    opacity:1;
    z-index:50;
    width:47%;
    height:46%;
    background-color: #FFFFFF;
}

.thumbDiv .thumb:hover {
    opacity:0.85;
}

.thumbDiv .thumbTitle {
    font-family: 'Open Sans', sans-serif;
    padding-left: 15px;
    padding-right: 15px;
    color: #333333;
    height: 22%;
    margin-top:-5px;
}

.thumbDiv .thumbImg {
    background-color: #999999;
    height: 78%;
    width: 100%;
    object-fit: cover;
    opacity: 0.9;
}

.homeImg {
    width: 100%;
    object-fit: cover;
    margin-bottom: -130px; /* determines title placement */
    opacity: 0.85;
    z-index: 10;
    height: 500px;
}

.homeBody img {
    max-width: 100%;
}

.featuredTitle {
    font-family: 'Open Sans', sans-serif;
    margin-left: 22px;
    color: #FFFFFF;
    text-shadow: 2px 2px 6px #333333;
    width: 90%;
    height: 118px;
    line-height: 130%;
    font-size: 36px;
    opacity: 0.99;
    z-index: 11;
    display: flex;
}

.featuredTitle h3 {
    display: inline-block;
    align-self: text-end;
    margin:0;
}


/* OKTHEATER PAGE */
.oktBody {
    width: 65%;
}

/* OKVIDEO PAGE */
.okvBody {
    width: 65%;
}

/* OKRADIO PAGE */
.okrBody {
    width: 65%;
}

/* OKBOOKS PAGE */
.okbBody {
    width: 65%;
}

/* CONTACTS PAGE */
.contactsBody {
    width: 65%;
}

/* FADE ANIMATION */
@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

.fades {
    -webkit-animation: fadein 0.5s; /* Safari, Chrome and Opera > 12.1 */
       -moz-animation: fadein 0.5s; /* Firefox < 16 */
        -ms-animation: fadein 0.5s; /* Internet Explorer */
         -o-animation: fadein 0.5s; /* Opera < 12.1 */
            animation: fadein 0.5s;
}

/* MOBILE LAYOUT */
@media screen and (max-width: 800px) {

    * {
        max-width: 100vw;
    }

    p {
        font-size: 18px;
        max-width: 96vw;
    }

    iframe {
        display: block;
        max-height: 180px;
        max-width: 100%;
    }

    .postGrid {
      width: 92vw;
    }

    .gridMap {
      width: 100%;
      height: 250px;
    }

    .gridMapVideo {
      width: 100%;
      height: 250px;
    }

    .gridMap p, .gridMapVideo p {
      margin-top: 7px;
      font-size: 18px;
    }

    .pageTitle {
        height: 20px;
    }

    /* MOBILE NAVBAR */
    .oktHeader {
        position: absolute;
        top: 0;
        text-align: left;
        padding-top: 7px;
        height: 120px;
        background-color: #FFFFFF;
        z-index: 100;
        max-width: 100vw;
    }

    .logo {
        width: 70vw;
        margin-left: 2.5vw;
    }

    .oktTitle {
        margin-bottom: 0px;
        margin-left: 10px;
        font-weight: bold;
    }

    .mainNav {
        list-style: none;
        display: flex;  
		flex-wrap: wrap;
        justify-content: start;
        padding-left: 0;
        width: 90vw;
        margin-left: 15px;
        margin-top: 14px;
        font-size: 14px;
    }

	.navItem {
			height: 20px;
			margin-right: 24px;
			margin-bottom: 15px;
	}

    .navLink {
        height: 40px;
    }
    
    .mainNav img {
        display: inline;
    }

    .lineHide {
        margin-top: -24px;
    }
        
    .navLink:hover .lineHide {
        visibility: visible;
    }
    /* CONTAINER FOR PAGE COMPONENTS */
    .mainBody {
        padding-top: 15px;
        display: block;
        margin-top: 110px;
        padding-left: 15px;
        max-width: 100vw;
    }

    /* HOME PAGE MOBILE*/
    .homeBody {
        margin-left: -15px;
        width: 100vw;
    }

    .homeTop {
        width: 100vw;
        display: block;
    }

    .featuredBox {
        width: 100%;
    }

    .homeImg {
        width: 100vw;
        object-fit: cover;
        margin-bottom: -130px; /* determines title placement */
        opacity: 0.8;
        z-index: 10;
        height: 270px;
    }

    .thumbDiv {
        height: 1200px;
        flex-wrap: wrap;
        justify-content: space-around;
        display: flex;
        background-color: #EDEDED;
        margin-top: 20px;
        padding: 12px;
        margin-bottom: 15px;
    }

    .thumbDiv .thumb {
        opacity:1;
        z-index:50;
        width:100%;
        height:22.5%;
        background-color: #FFFFFF;
    }

    .thumbDiv .thumb:hover {
        opacity:0.85;
    }

    .thumbDiv .thumbTitle {
        font-family: 'Open Sans', sans-serif;
        padding-left: 15px;
        padding-right: 15px;
        color: #333333;
        height: 22%;
        margin-top:-5px;
    }

    .thumbDiv .thumbImg {
        background-color: #999999;
        height: 78%;
        width: 100%;
        object-fit: cover;
        opacity: 0.9;
    }

    .featuredTitle {
        font-family: 'Open Sans', sans-serif;
        margin-left: 22px;
        color: #FFFFFF;
        text-shadow: 2px 2px 6px #333333;
        width: 90%;
        height: 94px;
        padding-top: 30px;
        line-height: 130%;
        font-size: 24px;
        opacity: 0.99;
        z-index: 11;
        display: flex;
    }

    .newsBox {
        width: 94vw;
        padding-top: 0px;
        background-color: #FFFFFF;
        height: 140%;
        padding-right: 30px;
    }

    /* OTHER PAGES */
    .oktBody {
        width: 93vw;
    }

    .okrBody {
        width: 93vw;
    }

    .okvBody {
        width: 93vw;
    }

    .okbBody {
        width: 93vw;
    }
    .okbBody img {
        max-width: 100%;
    }

    .contactsBody {
        width: 93vw;
    }

    /* ABOUT PAGE MOBILE*/
    
    .aboutBody {
        width: 93vw;
        min-width: 100px;
    }

    .pressQuote {
        width: 96%;
        font-style: italic; 
        font-weight: bold;
        margin-top: 30px;
        background-color: #EDEDED;
        padding: 7px;
    }

    .villagevoice { margin-left: 0%; }
    .nyt { margin-left: 0%; }


    .aboutHrs .hr2 {
        display:none;
        width: 100%;
    }
    .aboutHrs .hr3 {
        width: 100%;
        display: block;
    }

    .aboutPic {
        width: 100vw;
        margin-left: -15px;
        opacity: 0.9;
        z-index: 10;
    }

    .contactUs {
        height: 18px;
    }


}

